--- a/strawberry.html
+++ b/strawberry.html
@@ -20,9 +20,9 @@
             <ull>
                 <li>China</li>
                 <li>United States</li>
-                <li>Mexico</lii>
+                <li>Mexico</li>
                 <li>Egypt</li>
-                <li Turkey</li>
+                <li>Turkey</li>
             </ul>
 
             <!-- ------------------------------------------ -----> 
