added strawberry ice cream image

--- a/lemon.html
+++ b/lemon.html
@@ -19,11 +19,11 @@
             <!-- I think there is something wrong in this part --> 
 
             <ull>
-                <lu>India</li>
+                <li>India</li>
                 <li>Mexico</li>
                 <li>China</li>
                 <li>Argentina</li>
-                <li>Brazil /li>
+                <li>Brazil<li>
             </ul>
 
             <!-- I think there is something wrong in this part --> 
