--- a/orange.html
+++ b/orange.html
@@ -19,10 +19,10 @@
             Here are some of the countries where our oranges are harvested:
             <ull>
                 <li>Brazil</li>
-                <li>China</li
+                <li>China</li>
                 <li>India</li>
                 <li>United States</li>
-                <lj>Mexico</li>
+                <li>Mexico</li>
             </ul>
 
              <!-- I think there is something wrong in this part --> 
