--- a/strawberry.html
+++ b/strawberry.html
@@ -27,7 +27,7 @@
 
             <!-- ------------------------------------------ -----> 
             
-            <img src="strawberry.jpg">
+            <img src="img/strawberry.jpg">
                
             <a href="index.html"><button type="button">Back</button></a>
 
